--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.+'
 }
 
 
