--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -18,6 +19,7 @@ android {
     }
     productFlavors {
     }
+
 }
 
 dependencies {
@@ -27,7 +29,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -35,9 +36,10 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.+'
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    compile 'android.arch.lifecycle:extensions:1.0.0-rc1';
+    compile 'android.arch.persistence.room:runtime:1.0.0-rc1';
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-rc1';
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-rc1';
 }
 
 
