--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:1.0.0-rc1';
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-rc1';
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-rc1';
+    compile 'com.android.support:support-annotations:24.2.0';
+    compile 'com.android.support:recyclerview-v7:26.1.+';
+    compile 'com.github.bumptech.glide:glide:3.7.0';
 }
 
 
