--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
@@ -36,14 +37,19 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-    compile 'android.arch.lifecycle:extensions:1.0.0-rc1';
-    compile 'android.arch.persistence.room:runtime:1.0.0-rc1';
-    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-rc1';
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-rc1';
-    compile 'com.android.support:support-annotations:24.2.0';
-    compile 'com.android.support:recyclerview-v7:26.1.+';
+    compile 'android.arch.lifecycle:extensions:1.1.0';
+    compile 'android.arch.persistence.room:runtime:1.1.0-alpha3';
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.0';
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.0-alpha3';
+    compile 'com.android.support:support-annotations:27.1.0';
+    compile 'com.android.support:recyclerview-v7:26.1.0';
     compile 'com.github.bumptech.glide:glide:3.7.0';
+    compile 'com.google.android.gms:play-services:11.8.0';
 }
+
+
+
+
 
 
 
