--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
 }
 
 
