--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation "android.arch.lifecycle:livedata:1.1.1"
 
 }
 
