--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation "android.arch.lifecycle:livedata:1.1.1"
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 
 }
+
 
 
 
