--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation "android.arch.lifecycle:livedata:1.1.1"
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
 }
 
